Fix: scrollbar issue in the home page Fix: Toggle sidebar button position

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,7 @@
 
 .HomeContent {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     overflow: scroll;
     text-align: center;
     font-weight: 300;
