--- a/src/components/UI/Sidebar/Sidebar.css
+++ b/src/components/UI/Sidebar/Sidebar.css
@@ -21,7 +21,7 @@
     background: var(--color-light-sea-green);
 
     top: 33.5px;
-    right: -46px;
+    right: -45px;
     cursor: pointer;
     position: absolute;
 
